[project]
name = "projeto-superlinked"
version = "0.1.0"
description = "Aqui aprenderemos que realizar pesquisa semântica complexa"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai==2.8.1",
    "superlinked>=37.5.0",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
]
